feat(account): update account routers for del put
