# src/config/swagger.json
@@ -37,7 +37,7 @@
     "/account/register": {
       "post": {
         "summary": "用户注册",
-        "description": "用户注册(待完善)",
+        "description": "用户注册",
         "tags": [
           "用户模块"
         ],
@@ -50,9 +50,6 @@
                 "properties": {
                   "OrganizationId": {
                     "description": "团队id"
-                  },
-                  "RoleId": {
-                    "description": "角色id"
                   },
                   "Account": {
                     "description": "用户账号"
@@ -69,7 +66,6 @@
                 },
                 "example": {
                   "OrganizationId": "1",
-                  "RoleId": "1",
                   "Account": "1234567",
                   "Password": "3.1415926",
                   "Email": "123344@11.c0m",
@@ -123,7 +119,7 @@
     },
     "/account/login": {
       "post": {
-        "summary": "用户登陆",
+        "summary": "用户登陆(用户名密码)",
         "description": "用户登陆",
         "tags": [
           "用户模块"
@@ -183,12 +179,25 @@
         }
       }
     },
-    "/account/accounts": {
+    "/account/accounts/{id}": {
       "delete": {
-        "summary": "删除某个用户 (待开发)",
+        "summary": "删除某个用户",
         "description": "删除某个用户",
         "tags": [
           "用户模块"
+        ],
+        "security": [
+          {
+            "token": {}
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "description": "用户id",
+            "in": "path",
+            "required": true
+          }
         ],
         "responses": {
           "200": {
@@ -208,18 +217,128 @@
                 },
                 "data": {
                   "type": "object",
+                  "description": "用户信息",
+                  "example": {
+                    "AccountId": "2c41bb7d-c0b5-41e1-aa25-859619841154",
+                    "Account": "123",
+                    "Name": "123",
+                    "AvatarUrl": "https://image-1308319148.cos.ap-chengdu.myqcloud.com/main/33.png",
+                    "Email": "123344f@11.c0m",
+                    "Phone": "129127d81727818"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "查询单个用户信息",
+        "description": "查询单个用户信息",
+        "tags": [
+          "用户模块"
+        ],
+        "security": [
+          {
+            "token": {}
+          }
+        ],
+        "parameters": [
+          {
+            "name": "Id",
+            "description": "用户id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "查询用户信息成功",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "number",
+                  "description": "状态码",
+                  "example": 200
+                },
+                "massage": {
+                  "type": "string",
+                  "description": "查询信息",
+                  "example": "查询用户信息成功"
+                },
+                "data": {
+                  "type": "object",
                   "description": "用户信息"
                 }
               }
             }
           }
-        },
-        "security": [
-          {
-            "token": {}
-          }
-        ]
+        }
       },
+      "put": {
+        "summary": "更新用户信息",
+        "description": "更新用户信息",
+        "tags": [
+          "用户模块"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "OrganizationId": {
+                    "description": "团队id"
+                  },
+                  "Name": {
+                    "description": "用户名"
+                  },
+                  "Email": {
+                    "description": "用户邮箱"
+                  },
+                  "Phone": {
+                    "description": "用户手机号"
+                  }
+                },
+                "example": {
+                  "OrganizationId": "1",
+                  "Name": "杜若甫",
+                  "Email": "123344@11.c0m",
+                  "Phone": "12912781727818"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "查询用户信息成功",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "number",
+                  "description": "状态码",
+                  "example": 200
+                },
+                "massage": {
+                  "type": "string",
+                  "description": "查询信息",
+                  "example": "查询用户信息成功"
+                },
+                "data": {
+                  "type": "object",
+                  "description": "用户信息"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/account/accounts": {
       "get": {
         "summary": "获取全部用户列表(不分页)",
         "description": "查询用户列表",
@@ -348,66 +467,6 @@
               "authorization"
             ]
           }
-        ]
-      }
-    },
-    "/account/accounts/{id}": {
-      "get": {
-        "summary": "查询单个用户信息(id验证)",
-        "description": "查询单个用户信息",
-        "tags": [
-          "用户模块"
-        ],
-        "security": [
-          {
-            "token": {}
-          }
-        ],
-        "parameters": [
-          {
-            "name": "Id",
-            "description": "用户id",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "查询用户信息成功",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "code": {
-                  "type": "number",
-                  "description": "状态码",
-                  "example": 200
-                },
-                "massage": {
-                  "type": "string",
-                  "description": "查询信息",
-                  "example": "查询用户信息成功"
-                },
-                "data": {
-                  "type": "object",
-                  "description": "用户信息"
-                }
-              }
-            }
-          }
-        }
-      },
-      "put": {
-        "summary": "更新用户信息 (待开发)",
-        "description": "更新用户信息",
-        "tags": [
-          "用户模块"
-        ]
-      },
-      "patch": {
-        "summary": "修改用户密码 (待开发)",
-        "description": "修改用户密码",
-        "tags": [
-          "用户模块"
         ]
       }
     },
