# src/routers/account.route.ts
@@ -14,7 +14,7 @@ import Controller from '../controllers/account.controller';
  * /account/register:
  *   post:
  *     summary: 用户注册
- *     description: 用户注册(待完善)
+ *     description: 用户注册
  *     tags: [用户模块]
  *     requestBody:
  *       required: true
@@ -25,8 +25,6 @@ import Controller from '../controllers/account.controller';
  *             properties:
  *               OrganizationId:
  *                 description: 团队id
- *               RoleId:
- *                 description: 角色id
  *               Account:
  *                 description: 用户账号
  *               Password:
@@ -37,7 +35,6 @@ import Controller from '../controllers/account.controller';
  *                 description: 用户手机号
  *             example:
  *               OrganizationId: "1"
- *               RoleId: "1"
  *               Account: "1234567"
  *               Password: "3.1415926"
  *               Email: "123344@11.c0m"
@@ -71,7 +68,7 @@ router.post('/register', Controller.register);
  * @swagger
  * /account/login:
  *   post:
- *     summary: 用户登陆
+ *     summary: 用户登陆(用户名密码)
  *     description: 用户登陆
  *     tags: [用户模块]
  *     requestBody:
@@ -115,11 +112,18 @@ router.post('/login', Controller.login);
 //#region 删除用户
 /**
  * @swagger
- * /account/accounts:
+ * /account/accounts/{id}:
  *   delete:
- *     summary: 删除某个用户 (待开发)
+ *     summary: 删除某个用户
  *     description: 删除某个用户
  *     tags: [用户模块]
+ *     security:
+ *      - token: {}
+ *     parameters: # 请求参数：
+ *      - name: id
+ *        description: 用户id
+ *        in: path
+ *        required: true
  *     responses:
  *       200:
  *         description: 删除某个用户成功
@@ -137,11 +141,10 @@ router.post('/login', Controller.login);
  *           data:
  *             type: object
  *             description: 用户信息
- *     security:
- *      - token: {}
+ *             example: {"AccountId": "2c41bb7d-c0b5-41e1-aa25-859619841154","Account": "123","Name": "123","AvatarUrl": "https://image-1308319148.cos.ap-chengdu.myqcloud.com/main/33.png","Email": "123344f@11.c0m","Phone": "129127d81727818"}
  */
 // #endregion
-router.delete('/accounts', Controller.deleteAccount);
+router.delete('/accounts/:id', Controller.deleteAccount);
 
 //#region 获取用户列表(不分页)
 /**
@@ -231,12 +234,12 @@ router.get('/accounts', Controller.getAllAccountList);
 // #endregion
 router.get('/accounts/:page/:limit', Controller.getAllAccount);
 
-//#region 获取某用户信息(id验证)
+//#region 获取某用户信息
 /**
  * @swagger
  * /account/accounts/{id}:
  *   get:
- *     summary: 查询单个用户信息(id验证)
+ *     summary: 查询单个用户信息
  *     description: 查询单个用户信息
  *     tags: [用户模块]
  *     security:
@@ -303,26 +306,50 @@ router.get('/account', Controller.getSelfAccount);
  * @swagger
  * /account/accounts/{id}:
  *   put:
- *     summary: 更新用户信息 (待开发)
+ *     summary: 更新用户信息
  *     description: 更新用户信息
  *     tags: [用户模块]
- *
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               OrganizationId:
+ *                 description: 团队id
+ *               Name:
+ *                 description: 用户名
+ *               Email:
+ *                 description: 用户邮箱
+ *               Phone:
+ *                 description: 用户手机号
+ *             example:
+ *               OrganizationId: "1"
+ *               Name: "杜若甫"
+ *               Email: "123344@11.c0m"
+ *               Phone: "12912781727818"
+ *     responses:
+ *       200:
+ *         description: 查询用户信息成功
+ *         schema:
+ *          type: object
+ *          properties:
+ *           code:
+ *             type: number
+ *             description: 状态码
+ *             example: 200
+ *           massage:
+ *             type: string
+ *             description: 查询信息
+ *             example: 查询用户信息成功
+ *           data:
+ *             type: object
+ *             description: 用户信息
  */
 // #endregion
-router.put('/accounts/:id');
+router.put('/accounts/:id', Controller.putAccount);
 
-//#region 修改用户密码
-/**
- * @swagger
- * /account/accounts/{id}:
- *   patch:
- *     summary: 修改用户密码 (待开发)
- *     description: 修改用户密码
- *     tags: [用户模块]
- *
- */
-// #endregion
-router.patch('/accounts/:id');
 export default router;
 
 //Reference:
